styles: fix bug with backface-visibility CSS attribute in Safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -224,7 +224,7 @@ span {
 }
 
 .doctorCardFront, .doctorCardBack {
-  backface-visibility: hidden; /* TODO? */
+  -webkit-backface-visibility: hidden; /* TODO? */
 }
 
 .doctorCardFront {
